Update the looks of the journal cards - No longer overflows the card for both body and title
Update add new journal dialog box to move confirm button to bottom and make the body text field scrollable and start bigger

#32

--- a/client/src/app/journaling/journal-list.component.css
+++ b/client/src/app/journaling/journal-list.component.css
@@ -53,3 +53,15 @@
 #addNewJournal{
     background-color: lightcyan;
 }
+
+#journalBodyDiv{
+    overflow-y: hidden;
+    word-wrap: break-word;
+    height: 46px;
+}
+
+#journalTitleDiv{
+    overflow-y: hidden;
+    word-break: break-all;
+    height: 21px;
+}
